--- a/estilo.css
+++ b/estilo.css
@@ -3,14 +3,16 @@
 /* Importa a fonte Chakra Petch do Google Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");
 
+@font-face {
+  font-family: 'coffe';
+  src: url('fontes/Coffee\ Soda.otf.otf')   format('opentype') ;
+}
+
 /* Estiliza o corpo da página */
 body {
   font-family: "Chakra Petch", sans-serif; /* Define a fonte padrão */
-  background: linear-gradient(
-    to bottom,
-    black,
-    red
-  ); /* Cor de fundo da página */
+ background-image: url(imagens/fundo-do-site.png);  /* Cor de fundo da página */
+ background-position: center;
   display: flex; /* Usa Flexbox para layout */
   flex-direction: column; /* Alinha os itens na vertical */
   align-items: center; /* Centraliza os itens horizontalmente */
@@ -22,8 +24,9 @@ body {
 
 /* Estiliza os títulos h1 */
 h1 {
-  font-size: 2.5rem; /* Tamanho da fonte */
-  color: red; /* Cor do texto */
+  font-family:'coffe', Helvetica, sans-serif; /*Fonte externa*/
+  font-size: 7.5rem; /* Tamanho da fonte */
+  color: rgb(255, 248, 248); /* Cor do texto */
   text-align: center; /* Alinha o texto ao centro */
   letter-spacing: 0.4rem; /* Espaçamento entre letras */
   animation: fadeIn 3s ease-in-out;
