--- a/estilo.css
+++ b/estilo.css
@@ -216,13 +216,37 @@ footer {
 
 /*Estilos para dispositivos móveis menores (celulares, até 480px de largura) */
 @media (max-width:480px) {
+  h1 {
+    font-size: 3rem;
+  }
+  section input {
+    width: 90%;
+  }
 }
 /*Estilos para tablets (481px a 768px de largura) */
-@media (maxi-width:768px) {
+@media (max-width:768px) {
+  h1 {
+    font-size: 5rem;
+  }
+  section input {
+    width: 80%;
+  }
 }
 /*Estilos para notebooks e telas maiores (769px a 1024px de largura) */
 @media (min-width:769px) and (max-width:1024px) {
+  h1 {
+    font-size: 6.5rem;
+  }
+  section input {
+    width: 70%;
+  }
 }
 /*Estilos para telas grandes (acima de 1024px)*/ 
-@media (min-width:1025px){
+@media (min-width:1025px) {
+  h1 {
+    font-size: 7.5rem;
+  }
+  section input {
+    width: 60%;
+  }
 }
