--- a/estilo.css
+++ b/estilo.css
@@ -217,19 +217,35 @@ footer {
 /*Estilos para dispositivos móveis menores (celulares, até 480px de largura) */
 @media (max-width:480px) {
   h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
+    letter-spacing: 0.1rem;
   }
   section input {
-    width: 90%;
+    width: 80%;
+    padding: 0.5rem;
+  }
+  section button {
+    h1 {
+      padding: 0.5rem 1rem;
+      font-size: 0.8rem;
+    }
+    .resultados-pesquisa {
+      width: 90%;
+    }
+    .item-resultado {
+      width: 90%;
+    }
   }
 }
+
 /*Estilos para tablets (481px a 768px de largura) */
 @media (max-width:768px) {
   h1 {
     font-size: 5rem;
+    letter-spacing: 0.2rem;
   }
   section input {
-    width: 80%;
+    width: 70%;
   }
 }
 /*Estilos para notebooks e telas maiores (769px a 1024px de largura) */
