--- a/estilo.css
+++ b/estilo.css
@@ -1,62 +1,48 @@
 @charset "UTF-8";
 
 * {
-  overflow: hidden
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 /* Importa a fonte Chakra Petch do Google Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");
 
+
 @font-face {
-  font-family: 'Games';
+  font-family: 'Games'; Helvetica, sans-serif; 
   src: url('fontes/Games.otf') format('opentype');
   src: url('fontes/Games-Italic.ttf') format('truetype');
 }
-
-h1 {
-  font-size: 2rem;
-  /* Tamanho da fonte em telas menores */
-  letter-spacing: 0.2rem;
-  /* Espaçamento entre letras em telas menores */
+@font-face {
+font-family: '2p';
+src:url(fontes/PressStart2P-Regular.ttf) format('truetype');
 }
 
 /* Estiliza o corpo da página */
 body {
-  font-family: "Chakra Petch", sans-serif;
-  /* Define a fonte padrão */
+  font-family: "Chakra Petch", sans-serif;  /* Define a fonte padrão */
   background-image: url(imagens/imagem2.JPG);
   background-size: cover;
   background-position: bottom;
   flex-direction: column;
   display: flex;
-  display: grid;
-  /* Usa Flexbox para layout */
+  display: grid;  /* Usa Flexbox para layout */
   place-items: center;
-  align-items: flex-end;
-  /* Centraliza os itens horizontalmente */
-  justify-content: center;
-  /* Centraliza os itens verticalmente */
-  height: 100vh;
-  /* Preenche a altura total da viewport */
-  margin: 0;
-  /* Remove a margem padrão */
-  padding: 0;
-  /* Remove o padding padrão */
+  align-items: flex-end;  /* Centraliza os itens horizontalmente */
+  justify-content: center; /* Centraliza os itens verticalmente */
+  height: 100vh;  /* Preenche a altura total da viewport */
 }
 
 /* Estiliza os títulos h1 */
 h1 {
-  font-family: 'Games', Helvetica, sans-serif;
-  /*Fonte externa*/
-  font-size: 7.5rem;
-  /* Tamanho da fonte */
-  color: rgb(24, 24, 24);
+  font-family: 'Games', Helvetica, sans-serif;  /*Fonte externa*/
+  font-size: 2.5rem;  /* Tamanho da fonte */
+  color: rgb(24, 24, 24); /* Cor do texto */
   text-shadow: 7px 1px 0 rgb(3, 248, 16);
-  /* Cor do texto */
-  text-align: center;
-  /* Alinha o texto ao centro */
-  letter-spacing: 0.4rem;
-  /* Espaçamento entre letras */
+  text-align: center; /* Alinha o texto ao centro */
+  letter-spacing: 0.4rem; /* Espaçamento entre letras */
   animation: fadeIn 3s ease-in-out;
 }
 
@@ -72,14 +58,10 @@ h1 {
 
 /* Estiliza as seções da página */
 section {
-  display: flex;
-  /* Usa Flexbox para layout */
-  flex-direction: column;
-  /* Alinha os itens na vertical */
-  align-items: center;
-  /* Centraliza os itens horizontalmente */
-  margin-bottom: 4rem;
-  /* Espaçamento abaixo de cada seção */
+  display: flex;  /* Usa Flexbox para layout */
+  flex-direction: column; /* Alinha os itens na vertical */
+  align-items: center;  /* Centraliza os itens horizontalmente */
+  margin-bottom: 4rem; /* Espaçamento abaixo de cada seção */
   color: rgb(0, 0, 0);
   text-align: center;
   font-weight: bold;
@@ -87,131 +69,105 @@ section {
 
 /* Estiliza os inputs dentro das seções */
 section input {
-  width: 30rem;
-  /* Largura dos inputs */
+  width:30rem ;
   border-bottom: 1px 2px green;
-  padding: 1rem;
-  /* Espaçamento interno */
-  border-radius: 1.5rem;
-  /* Borda arredondada */
-  margin-bottom: 1rem;
-  /* Espaçamento abaixo dos inputs */
-  color: #000000;
-  /* Cor do texto */
-  font-size: 1rem;
-  /* Tamanho da fonte */
-  box-sizing: border-box;
-  /* Inclui padding e border na largura total */
+  padding:1rem;
+  border-radius:1.5rem;
+  margin-bottom:1rem;
+  color:#000000;
+  font-size:1rem;
+  box-sizing:border-box;
   background-color: rgba(106, 120, 107, 0.273);
 }
 
+
 /* Estiliza os botões dentro das seções */
 section button {
-  padding: 0.8rem 1.2rem;
-  /* Espaçamento interno do botão */
-  border: none;
-  /* Remove a borda padrão */
-  border-radius: 1.5rem;
-  /* Borda arredondada */
-  background-color: rgba(0, 128, 0, 0.541);
-  /* Cor de fundo do botão */
-  color: black;
-  /* Cor do texto do botão */
-  font-size: 1rem;
-  /* Tamanho da fonte */
-  cursor: pointer;
-  /* Muda o cursor para indicar que é clicável */
-  font-weight: bolder;
+padding: 15px 10px;
+margin-top: 10px;
+font-family: '2p', Helvetica, sans-serif;
+font-size: 1.0rem; /* Tamanho da fonte */
+color: white; /* Cor do texto do botão */
+background-color: #00cc00; /* Cor de fundo do botão */
+border: none;  /* Remove a borda padrão */
+border-radius: 25px;
+cursor: pointer; /* Muda o cursor para indicar que é clicável */
+animation: expand 1s infinite alternate;
+text-shadow: 1px 1px 3px #000000;
 }
 
+@keyframes expand {
+  100% {
+    transform: scale(1.1);
+  }
+}
 /* Adiciona efeito hover ao botão de pesquisa */
 section button:hover {
-  background-color: rgb(140, 230, 115);
-  /* Muda a cor de fundo ao passar o mouse */
-  box-shadow: 0 4px 8px rgb(80, 201, 74);
-  /* Adiciona uma sombra mais intensa */
+  background-color: #009900;  /* Muda a cor de fundo ao passar o mouse */
 }
 
+
 /* Estiliza a caixa de resultados da pesquisa */
-.resultados-pesquisa {
-  width: 60rem;
-  /* Largura máxima da caixa de resultados */
-  height: 46vh;
-  /* Altura máxima da caixa de resultados */
-  overflow-y: auto;
-  /* Adiciona rolagem vertical se necessário */
-  margin-top: 1rem;
-  /* Espaçamento acima da caixa de resultados */
-  padding: 1rem;
-  /* Espaçamento interno */
-  border-radius: 1.5em;
-  /* Borda arredondada */
+*.resultados-pesquisa {
+  width: 60rem; /* Largura máxima da caixa de resultados */
+  height: 46vh;  /* Altura máxima da caixa de resultados */
+  overflow-y: auto;  /* Adiciona rolagem vertical se necessário */
+  margin-top: 1rem; /* Espaçamento acima da caixa de resultados */
+  padding: 1rem;  /* Espaçamento interno */
+  border-radius: 1.5em; /* Borda arredondada */ 
 }
 
 /* Estiliza cada item de resultado */
 .item-resultado {
-  background-color: rgb(0, 128, 0);
-  border-radius: 0.6rem;
-  /* Borda arredondada */
-  padding: 1rem;
-  /* Espaçamento interno */
-  margin-bottom: 1rem;
-  /* Espaçamento abaixo dos itens */
-  box-shadow: 1 1px 4px rgba(1, 1, 1, 0.219);
-  /* Sombra leve */
+  background-color: #28a745;
+  border-radius: 25px; /* Borda arredondada */
+  padding: 1rem; /* Espaçamento interno */
+  margin-bottom: 1rem; /* Espaçamento abaixo dos itens */
+  box-shadow: 1 1px 4px rgba(1, 1, 1, 0.219);  /* Sombra leve */
   width: 400px;
+  text-align: justify;
 }
 
 /* Estiliza os títulos dentro dos itens de resultado */
 .item-resultado h2 {
-  font-size: 1.5rem;
-  /* Tamanho da fonte */
-  color: rgb(0, 0, 0);
-  /* Cor do texto */
+  font-size: 1.5em; /* Tamanho da fonte */
+  color: #252525; /* Cor do texto */
   text-align: center;
 }
 
 /* Estiliza os links dentro dos itens de resultado */
 .item-resultado a {
-  text-decoration: none;
-  /* Remove o sublinhado padrão dos links */
-  color: rgb(246, 247, 249);
-  /* Cor do texto dos links */
+  text-decoration: none;  /* Remove o sublinhado padrão dos links */
+  color: #ffffff; /* Cor do texto dos links */
+  letter-spacing: 3px;
 }
 
 /* Estiliza os links quando são passados o mouse sobre */
 .item-resultado a:hover {
-  text-decoration: underline;
-  /* Adiciona sublinhado ao passar o mouse */
+  text-decoration: underline;  /* Adiciona sublinhado ao passar o mouse */
 }
 
 /* Estiliza a descrição meta dentro dos itens de resultado */
 .descricao-meta {
-  color: rgb(0, 0, 0);
-  /* Cor do texto */
-  margin: 0.5rem 0;
-  /* Margem acima e abaixo */
+  color: rgb(0, 0, 0);   /* Cor do texto */
+  margin: 0.5rem 0;  /* Margem acima e abaixo */
 }
 
 /* Estiliza o rodapé da página */
 footer {
-  background: rgba(6, 139, 6, 0.162);
-  /* Cor de fundo do rodapé */
-  color: #040404;
-  /* Cor do texto */
-  text-align: center;
-  /* Alinha o texto ao centro */
-  font-weight: bolder;
-  padding: 0;
-  /* Espaçamento interno */
-  width: 100%;
-  /* Largura total da página */
-  position: absolute;
-  /* Posiciona o rodapé */
+  background-color: rgba(0, 0, 0, 0.6); /* Cor de fundo do rodapé */
+  color: white;  /* Cor do texto */
+  padding: 10px; /* Espaçamento interno */
+  font-size: 0.9em;
+  position: fixed;  /* Posiciona o rodapé */
+  width: 100%; /* Largura total da página */
   bottom: 0;
-  /* Alinha ao fundo da página */
-  font-size: 1rem;
-  /* Tamanho da fonte */
+  left: 0;  /* Alinha ao fundo da página */
+  text-align: center; /* Alinha o texto ao centro */
+}
+
+footer p {
+  margin: 5px 0;
 }
 
 /* Estilos para celulares pequenos */
