--- a/estilo.css
+++ b/estilo.css
@@ -11,7 +11,7 @@
 
 
 @font-face {
-  font-family: 'Games'; Helvetica, sans-serif; 
+  font-family: 'Games';
   src: url('fontes/Games.otf') format('opentype');
   src: url('fontes/Games-Italic.ttf') format('truetype');
 }
